# Server

./: .dockerignore  .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  config.example.toml  ferrischat-nginx.conf  installation.md  setup.sh  sqlx-data.json  update.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: api_bug_report.yml  bug_report.md  feature_request.md
.github/workflows/: linters.yml  rust.yml  sqlx-updates.yml
ferrischat_auth/: Cargo.toml
ferrischat_auth/src/: auth_struct.rs  init.rs  lib.rs  split_token.rs  verify_token.rs
ferrischat_config/: Cargo.toml
ferrischat_config/src/: lib.rs
ferrischat_core/: Cargo.toml
ferrischat_core/src/: lib.rs
ferrischat_db/: Cargo.toml
ferrischat_db/src/: lib.rs
ferrischat_macros/: Cargo.toml
ferrischat_macros/src/: bigdecimal_to_u128.rs  get_db_or_fail.rs  get_item_id.rs  get_node_id.rs  lib.rs  u128_to_bigdecimal.rs  version_expansion.rs
ferrischat_perms/: Cargo.toml
ferrischat_perms/src/: lib.rs  local_cache.rs
ferrischat_perms/src/calculate/: channel.rs  guild.rs  mod.rs
ferrischat_perms/src/manage/: error.rs  mod.rs
ferrischat_redis/: Cargo.toml
ferrischat_redis/src/: lib.rs
ferrischat_webserver/: Cargo.toml
ferrischat_webserver/src/: entrypoint.rs  errors.rs  get_db_or_fail.rs  json_response.rs  lib.rs  not_implemented.rs  special_headers.rs  version_expansion.rs
ferrischat_webserver/src/auth/: auth_struct.rs  bot_get_token.rs  get_token.rs  init_rng.rs  mod.rs  reset_password.rs  token_gen.rs
ferrischat_webserver/src/channels/: create_channel.rs  delete_channel.rs  edit_channel.rs  get_channel.rs  mod.rs  typing_end.rs  typing_start.rs
ferrischat_webserver/src/guilds/: create_guild.rs  delete_guild.rs  edit_guild.rs  get_guild.rs  mod.rs
ferrischat_webserver/src/guilds/roles/: add_member_role.rs  create_role.rs  delete_role.rs  edit_role.rs  get_role.rs  mod.rs  remove_member_role.rs
ferrischat_webserver/src/invites/: create_invite.rs  get_guild_invites.rs  get_invite.rs  mod.rs  use_invite.rs
ferrischat_webserver/src/members/: create_member.rs  delete_member.rs  get_member.rs  mod.rs
ferrischat_webserver/src/messages/: delete_message.rs  edit_message.rs  get_messages.rs  message_history.rs  mod.rs  send_message.rs
ferrischat_webserver/src/users/: create_bot.rs  create_user.rs  delete_user.rs  edit_user.rs  get_me.rs  get_user.rs  mod.rs  verify_user.rs
ferrischat_webserver/src/users/bots/: create_bot.rs  delete_bot.rs  edit_bot.rs  get_bots_by_user.rs  invite_bot.rs  mod.rs
ferrischat_webserver/src/ws/: fire_event.rs  handler.rs  info.rs  mod.rs  tcp_socket_open.rs
ferrischat_ws/: Cargo.toml
ferrischat_ws/src/: config.rs  connection_data.rs  error_handling.rs  event.rs  handle_connection.rs  init.rs  inter_communication.rs  lib.rs  redis_handler.rs  rx_handler.rs  tx_handler.rs  types.rs  utils.rs
ferrischat_ws/src/events/: channel.rs  guild.rs  identify.rs  invite.rs  member.rs  message.rs  mod.rs  ping.rs  pong.rs  typing.rs  utils.rs
ferrischat_ws/src/events/error/: from_impls.rs  mod.rs
ferrischat_ws/src/events/rx/: mod.rs
ferrischat_ws/src/events/tx/: mod.rs
ferrischat_ws/src/redis_handler/: check_message.rs  event_handler.rs  handle_message.rs  handle_subscribe.rs  handle_unsubscribe.rs  mod.rs
http/: Cargo.toml
http/src/: auth.rs  cache.rs  checks.rs  database.rs  lib.rs  ratelimit.rs  response.rs
http/src/routes/: auth.rs  channel.rs  guild.rs  mod.rs  user.rs
http_tests/: auth_tests.http  guild_tests.http  user_tests.http
migrations/: 20210804005021_initial_migration.sql  20210804214341_not_null.sql  20210806003210_update_sql.sql  20210806023257_bigint_conversion.sql  20210807171822_auth_tokens.sql  20210807190148_user_flags.sql  20210807221441_owner_id_bigint.sql  20210809002805_channel_guild.sql  20210809005728_onemore_bigint_conversion.sql  20210809030312_add_more_user_info.sql  20210812001518_user_fields_not_null.sql  20210812005726_delete_cascade_user.sql  20210812014357_password_field_to_text.sql  20210812020944_unique_email_constraint.sql  20210821213025_channel_linking.sql  20210822021929_members_item_type_change.sql  20210822034117_message_length_increase.sql  20210822034529_message_type_change.sql  20210822041547_message_author_add.sql  20210822042057_more_not_null.sql  20210827202612_invites_table_create.sql  20210827213551_add_edited_at.sql  20210827214426_fix-invite.sql  20210827214911_invites_table_update.sql  20210828014347_invites_code_unique.sql  20210830044757_invites_uses_not_null.sql  20210830231520_change_invite_created_at.sql  20210901220845_add-disc.sql  20210901225839_make_disc_not_null.sql  20211102233704_roles.sql  20211114013310_guild_delete_cascade.sql  20211114014009_guild_delete_cascade_channels.sql  20211114014357_user_delete_cascade_messages.sql  20211114014449_user_delete_cascade_auth_tokens.sql  20211116070235_add_verified_column.sql  20211120162230_add_bots.sql  20211120165917_bigint_converion_2.0.sql  20211122171413_bots_relations.sql  20211122230041_verified_not_null.sql  20211123015512_pronouns.sql  (+14 more)
node_setup/: config.toml  ferrischat_server.service
src/: main.rs
