[package]
name = "ferrischat_server"
version = "0.1.0"
edition = "2021"
authors = ["FerrisChat Team <crates@ferris.chat>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "ferrischat_db",
  "ferrischat_webserver",
  "ferrischat_macros",
  "ferrischat_redis",
  "ferrischat_ws",
  "ferrischat_auth",
  "ferrischat_config",
  "ferrischat_core",
]

[dependencies]
ferrischat_core = { path = "ferrischat_core" }

[patch.crates-io]
bitflags = { git = "https://github.com/bitflags/bitflags" }
redis = { git = "https://github.com/tazz4843/redis-rs" }
