[package]
name = "server"
version = "0.2.0"
authors = ["jay3332"]
edition = "2021"
description = "The backend for FerrisChat"
license = "EUPL-1.2"
repository = "https://github.com/FerrisChat/Server"
keywords = ["ferrischat", "chat"]
categories = ["network-programming", "asynchronous", "web-programming"]

[profile.release]
lto = "fat"

[patch.crates-io]
bitflags = { git = "https://github.com/bitflags/bitflags" }
redis = { git = "https://github.com/tazz4843/redis-rs" }
