[package]
name = "server"
version = "0.2.0"
authors = ["jay3332"]
edition = "2021"
description = "The backend for FerrisChat"
license = "EUPL-1.2"
repository = "https://github.com/FerrisChat/Server"
keywords = ["ferrischat", "chat"]
categories = ["network-programming", "asynchronous", "web-programming"]

[workspace]
members = [
    "http",
]

[profile.release]
lto = "fat"

[dependencies]
ferrischat_http = { path = "http" }
tokio = { version = "1", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
