[package]
name = "ferrischat_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
argonautica = { version = "0.2", features = ["serde", "simd"]}
actix-web = { git = "https://github.com/actix/actix-web/" }
base64 = "0.13"
num-bigint = "0.3"

ferrischat_db = { path = "../ferrischat_db" }
ferrischat_macros = { path = "../ferrischat_macros"}

[dependencies.tokio]
version = "1.11"
features = ["full"]

[dependencies.sqlx]
version = "0.5"
features = ["postgres", "macros", "offline", "runtime-actix-rustls", "time"]
