[package]
name = "ferrischat_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferrischat_webserver = { path = "../ferrischat_webserver" }
ferrischat_config = { path = "../ferrischat_config" }
ferrischat_auth = { path = "../ferrischat_auth" }
ferrischat_db = { path = "../ferrischat_db" }
ferrischat_redis = { path = "../ferrischat_redis" }
ferrischat_ws = { path = "../ferrischat_ws" }
env_logger = "0.9"
clap = "2.33"
tracing-subscriber = { version = "0.3.2", features = ["env-filter", "tracing-log"] }
futures = "0.3"

[dependencies.tokio]
version = "1.14"
features = ["full"]
