[package]
name = "ferrischat_db"
version = "0.1.0"
edition = "2018"
description = "Database utilities for FerrisChat"
license = "EUPL-1.2"
homepage = "https://ferris.chat"
repository = "https://github.com/FerrisChat/Server"
include = [
  "**/*.rs",
  "Cargo.toml",
  "/.gitignore",
  "/LICENSE",
  "/README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.tokio]
version = "1.8"
features = ["full"]

[dependencies.sqlx]
version = "0.5"
features = ["postgres", "macros", "offline", "runtime-actix-rustls", "bigdecimal"]
