[package]
name = "ferrischat_perms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferrischat_redis = { path = "../ferrischat_redis" }
ferrischat_db = { path = "../ferrischat_db" }
ferrischat_common = { git = "https://github.com/FerrisChat/Common.git", version = "0.3", branch = "perms" }

dashmap = "5.0"
