[package]
name = "ferrischat_redis"
version = "0.1.0"
edition = "2018"
description = "Redis utilities for FerrisChat"
license = "EUPL-1.2"
homepage = "https://ferris.chat"
repository = "https://github.com/FerrisChat/Server"
include = [
  "**/*.rs",
  "Cargo.toml",
  "/.gitignore",
  "/LICENSE",
  "/README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool = { version = "0.9", features = ["rt_tokio_1", "serde"] }
deadpool-redis = { version = "0.10", features = ["serde"] }
redis = { version = "0.21", features = ["aio", "tokio", "tokio-comp", "connection-manager"] }
rand = "0.8"
base64 = "0.13"
tokio = { version = "1.11", features = ["full"] }
sysinfo = "0.20"
ferrischat_config = { path = "../ferrischat_config", version = "0.1.0" }
