[package]
name = "ferrischat_webserver"
version = "0.1.0"
edition = "2018"
description = "The core FerrisChat webserver and docs"
license = "EUPL-1.2"
homepage = "https://ferris.chat"
repository = "https://github.com/FerrisChat/Server"
include = [
  "**/*.rs",
  "Cargo.toml",
  "/.gitignore",
  "/LICENSE",
  "/README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-actors = "3"
actix = "0.10"
num-traits = "0.2"
ring = "0.16"
futures = "0.3"
base64 = "0.13"
tokio = { version = "1.9", features = ["full"] }
argonautica = { version = "0.2", features = ["serde", "simd"]}
futures-cpupool = "0.1"
dotenv = "0.15"

ferrischat_db = { path = "../ferrischat_db", version = "0.1" }
ferrischat_common = { git = "https://github.com/FerrisChat/Common.git", version = "0.1" }
ferrischat_macros = { path = "../ferrischat_macros", version = "0.1" }
ferrischat_snowflake_generator = "1"

[dependencies.sqlx]
version = "0.4"
features = ["postgres", "macros", "offline", "runtime-actix-rustls"]